routes are now working with buttons

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6966e6c8-7fd9-4ad6-918d-d071103c9177"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
